Journey Pattern concept can be demonstrated using both Cucumber and plain old JUnit

--- a/petclinic-screenplay/pom.xml
+++ b/petclinic-screenplay/pom.xml
@@ -81,7 +81,8 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/Play*.java</include>
+                                <include>**/cucumber/Play*.java</include>
+                                <include>**/junit/*Feature.java</include>
                             </includes>
                         </configuration>
                     </execution>
